frontend/src/styles.css
main > *,
.app-row > *,
.app-content > *,
.app-row-title
{
  _border: 1px dashed blue;
}
.cards-placeholder,
.records-placeholder,
.data-placeholder,
.widgets-left-placeholder,
.widgets-center-placeholder,
.widgets-right-placeholder,
.sidebar-placeholder,
.page-actions-placeholder
{
  border: 1px dashed red;
  background: rgba(205, 0, 13, 0.31);
}

.app-container.container--colorful { background: rgb(245, 245, 245); }
.app-container.container--colorful nav { background: rgb(232, 232, 241); }
.app-container.container--colorful nav .app-menu .logo { background: darkviolet; }
.app-container.container--colorful nav .app-account { background: gold; }
.app-container.container--colorful nav .app-hamburger ul { background: indigo; }
.app-container.container--colorful nav .app-hamburger ul li:hover { background: gold; }
.app-container.container--colorful nav .app-hamburger ul li.app-account { background: gold; }
.app-container.container--colorful main .app-sidebar { background: rgb(240, 240, 240); }
.app-container.container--colorful main .app-sidebar .app-filters { background: rgb(255, 246, 251); }
.app-container.container--colorful main { background: rgb(255, 255, 255); }
.app-container.container--colorful main .content { background: rgb(255, 253, 249); }
.app-container.container--colorful main .content .description { background: rgb(217, 219, 223); }
.app-container.container--colorful main .content .app-filters { background: rgb(252, 246, 249); }
.app-container.container--colorful main .content .app-actions { background: rgb(233, 227, 217); }
.app-container.container--colorful main .content .title-row .title-header { background: rgb(255, 255, 255); }
.app-container.container--colorful main .content .title-actions-item { background: rgb(187, 187, 187); }
.app-container.container--colorful main .content .data-placeholder { background: rgb(255, 255, 255); }
.app-container.container--colorful main .content .data-placeholder .app-card { background: rgb(234, 245, 255); border: 1px solid rgb(180, 180, 180); }









:root {
  --base-font: 'Ubuntu', sans-serif;
}

* {
  box-sizing: border-box;
}
html, body {
  width: 100%;
  height: 100%;
  margin: 0;
  font-family: var(--base-font);
}
button, input {
  font-family: inherit;
}
ul {
  padding: 0;
}
li {
  padding: 5px 10px;
  margin: 0;
  display: block;
}

:root {
  --navbar-size: 70px;
  --navbar-size-xs: 50px;
  --sidebar-size: 25vw;

  --card-height: 20vh;

  --humburger-width: 90%;
  --humburger-pos-right: 0px;
  --humburger-pos-top: 0px;
  --humburger-pos-left: none;
  --humburger-pos-bottom: none;

  --xs-size: 600px;
  --xs-title-actions-top: none;
  --xs-title-actions-right: 7vw;
  --xs-title-actions-left: none;
  --xs-title-actions-bottom: 2vh;

  --xs-data-placeholder-margin-bottom: 6vh;
}

.app-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

nav {
  height: var(--navbar-size);
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 10;
}
nav .app-menu {
  display: flex;
  align-items: center;
}
nav .app-menu .logo { }
nav .app-menu ul { }
nav .app-menu ul li { float: left; display: block; margin: 0;}
nav .app-account { }
nav .app-hamburger { display: none; }


main {
  width: 100%;
  flex: 1;
  display: flex;
  z-index: 1;
  min-height: 100%;
}

.app-content {
  flex: 1;
  display: flex;
  flex-direction: column;
}
@media (max-width: 600px) {
  .app-content {
    margin-top: var(--navbar-size-xs);
  }
}


/* SIDEBAR PAGE LAYOUT */

.app-content .title-row {
  display: flex;
  justify-content: space-between;
}
.page-actions { display: flex; flex-wrap: wrap; justify-content: flex-end; }
.page-actions .title-actions-item {
  float: left;
  display: block;
}
.app-sidebar {
  width: var(--sidebar-size);
}
.app-filters { }
.app-actions { display: flex; justify-content: space-between; }
.app-content .data-placeholder {
  flex: 1;
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  overflow-y: auto;

  padding-top: 22px;
}
.app-card {
  height: var(--card-height);
  flex-basis: auto;
}
@media (min-width: 601px)  {
  .app-card { width: 33.333%; }
}
@media (max-width: 600px) {

  .app-content .data-placeholder {
    margin-bottom: var(--xs-data-placeholder-margin-bottom);
  }

  .page-actions {
    position: fixed;
    top: var(--xs-title-actions-top);
    right: var(--xs-title-actions-right);
    left: var(--xs-title-actions-left);
    bottom: var(--xs-title-actions-bottom);
    display: flex;
    flex-flow: wrap-reverse;
  }
}




/* OVERVIEW LAYOUT */
.app-content .app-row {
  display: flex;
  padding-left: 60px;
  padding-right: 60px;
}
@media (max-width: 600px)  {
  main .app-content .app-row {
    flex-direction: column;
    padding-left: 20px;
    padding-right: 20px;
  }
}
.app-widgets-row {
  justify-content: space-evenly;
  height: 55vh;
  position: relative;
  z-index: 1;
}
.app-widgets-row:before {
  position: absolute;
  content: ' ';
  top: 0;
  left: 0;
  width: 100%;
  background: #eee;
  z-index: -1;
  bottom: 25%;
}
.app-widgets-row .action {
  position: absolute;
  bottom: 25%;
}
.app-widgets-row .app-widgets-column {
  height: 100%;
  width: 100%;
  position: relative;
}
.app-widgets-row .widgets-grid {
  width: 51vw;
}
.app-data-row .app-row-title {
  flex: 1;
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  width: 100%;
}
.app-data-row .app-column--left,
.app-data-row .app-column--right {
  flex: 1;
}


.app-card--sm {
  width: 50%;
  height: 160px;
}
@media (max-width: 600px)  {
  .app-card--sm {
    width: 100%;
  }
}

.app-record {
  height: 70px;
}



@media (min-width: 2049px) { .xxl1 { width: 6.5%; } }
@media (max-width: 2048px) { .xl2 { width: 12.5%; } }
@media (max-width: 1600px) { .l3 { width: 25%; } }
@media (max-width: 1200px) { .m4 { width: 33.333%; } }
@media (max-width: 800px)  { .s6 { width: 50%; } }
@media (max-width: 600px)  { .xs12 { width: 100%; } }

@media (min-width: 601px)  { .xs-only { display: none; } }
@media (max-width: 600px)  { .xs-only { display: block; } }
@media (min-width: 601px)  { .except-xs { display: block; } }
@media (max-width: 600px)  { .except-xs { display: none; } }

@media (max-width: 600px) {

  nav {
    position: fixed;
    height: var(--navbar-size-xs);
  }
  nav .app-hamburger { display: block; }
  nav .app-hamburger ul { display: none; }
  nav .app-hamburger ul li { padding: 0; display: block;}
  nav .app-hamburger ul li.app-account { }
  nav .app-hamburger:hover ul { display: block; }
  nav .app-hamburger ul {
    position: fixed;
    top: var(--humburger-pos-top);
    right: var(--humburger-pos-right);
    left: var(--humburger-pos-left);
    bottom: var(--humburger-pos-bottom);
    z-index: 10;
    width: var(--humburger-width);
  }

  nav .app-menu ul { display: none; }
  nav .app-account { display: none; }

}




/*
@import "ag-grid-community/dist/styles/ag-grid.css";
@import "ag-grid-community/dist/styles/ag-theme-alpine.css";


.ag-theme-alpine {
  -webkit-font-smoothing: antialiased;
  color: #6A6A6A;
  font-family: Roboto, sans-serif;
  font-size: 16px;
  line-height: normal;
}
.ag-theme-alpine .ag-header-row {
  font-weight: 500;
  color: #6A6A6A;
}
.ag-theme-alpine .ag-header {
  background-color: unset;
  border-bottom: solid 1px #EFEFEF;
  border-bottom-color: #EFEFEF;
}
.ag-theme-alpine .ag-root-wrapper {
  border: none;
}
.ag-theme-alpine .ag-row {
  font-size: 16px;
  color: #6A6A6A;
  font-style: normal;
  font-weight: normal;
  font-family: Roboto, sans-serif;
  border: none 1px #EFEFEF;
}
.ag-theme-alpine .ag-header {
  border-bottom: none;
}


.ag-theme-alpine .ag-row-odd {
  background-color: #ffffff;
}
.ag-theme-alpine .ag-cell {
  line-height: 50px;
}

:root {

  --schema-darkest: #293962;
  --schema-dark: #425072;
  --schema-accent: #e87676;
  --schema-white: #ffffff;

  --menu-item-accent: #606d8e;
  --menu-item-disabled: #7788b0;
  --menu-item-enabled: #ffffff;

  --headers-main: #2c3145;
  --headers-yellow: #deff82;
  --headers-green: #35f180;

  --control-label: #5c5c5c;
  --control-placeholder: #cacaca;
  --control-parameter-value: rgba(255,255,255, 0.75);

  --accent-success: #5ed17f;
  --accent-failed: #cd3636;
}

* {
  box-sizing: border-box;
}

html {
  margin: 0;
  padding: 0;
  height: 100%;
  min-height: 100%;
}
body {
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
  height: 100%;
  min-height: 100%;
}

h1 {
  font-size: 45px;
  font-weight: 900;
  line-height: .9;
  letter-spacing: 1px;
  margin: 0;
  padding: 0;
  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
}
h2 {
  font-size: 36px;
  font-weight: 700;
  margin: 0;
  padding: 0;
}
h3 {
  font-size: 18px;
  font-weight: 700;
  margin: 0;
  padding: 0;
}
h4 {
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 1px;
  margin: 0;
  padding: 0;
}
h5 {
  font-size: 12px;
  font-weight: 500;
  margin: 0;
  padding: 0;
}

.main-action {
  font-style: normal;
  font-weight: 300;
  font-size: 14px;
  line-height: 16px;
  letter-spacing: 0.25px;
}
.page-action {
  font-size: 12px;
  font-weight: 500;
}
.control-text {
  font-size: 12px;
  font-weight: 400;
}
.parameter-title {
  font-size: 18px;
  font-weight: 700;
}
.parameter-value {
  font-size: 24px;
  font-weight: 300;
}

.status-success {
  color: var(--accent-success);
}
.status-failed {
  color: var(--accent-failed);
}


.rotate {
  animation: rotate 3s linear infinite;
}

@keyframes rotate { 100% { transform: rotate(360deg); } }


*/

